frontend/test/should_fail/delretypesame_001b.grg
rule r{	n:Node;		alternative {		case1 {						modify {				m:Node<n>;			}		}	}		modify {		delete(n);	}}